v1.256.0: the native-access grant — JEP 472 before it bites
The live gauntlet on the shipped 1.255.0 app (the first release running
the bundled Zulu 25 + OpenJFX 26 runtime) found the platform calling
restricted methods on every boot: com.sun.jna.Native calls
System::loadLibrary from the classpath, and javafx.graphics/javafx.web
call restricted natives when the Browser opens. JDK 25 warns that these
WILL BE BLOCKED in a future release — the platform would stop booting and
the Browser could no longer load WebKit.

The grant goes in now rather than then: this conf ships only inside
installers, never through the update center (which carries modules, not
runtimes), so an install that never receives a fresh conf can never be
fixed retroactively.

* base conf grants --enable-native-access=ALL-UNNAMED (JNA + every
  classpath caller); verified accepted and silent on Temurin 21 as well
  as the bundled 25, so the portable zip's BYO-Java range is untouched
* the NAMED javafx.graphics,javafx.web entries are written by whichever
  script installs the FX runtime (bundle-jre.sh for mac/linux, the
  windows lane) — naming an absent module prints "Unknown module" on
  every launch of the FX-less portable zip
* both rewrites EXTEND the single default_options line rather than
  appending a second: the Windows .exe greps this file for keys instead
  of sourcing it, so two assignments have no defined winner
* both anchored to that line — verification caught the first sed also
  rewriting the explanatory comment, shipping prose that contradicted
  its own code; the PowerShell mirror had the same flaw, fixed and
  re-proven against real pwsh

Proven live: the shipped 1.255.0 app booted with these flags and emitted
zero native-access warnings, against four without.

Gated + mutation-proven x4: PackagedConfGateTest pins the grant and the
single default_options line; BundledRuntimeGateTest pins that BOTH jlink
sites write the FX half.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>